creusot/tests/should_fail/ghost/deref_in_program.stderr
error: dereference of a ghost variable in program context
 --> deref_in_program.rs:6:20
  |
6 |     let _: &i32 = &*g;
  |                    ^^

error: dereference of a ghost variable in program context
  --> deref_in_program.rs:11:28
   |
11 |     let _: &mut i32 = &mut *g;
   |                            ^^

error: trying to access the contents of a ghost variable in program context
  --> deref_in_program.rs:16:18
   |
16 |     let _: i32 = g.into_inner();
   |                  ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

